# cmip6_aws

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: docs-build.yml  installation.yml
changelog/: index.html
cmip6_aws/: __init__.py  cmip6_aws.py  index.html  main.py
cmip6_aws/data/: index_v1.2_md5.txt
common/: index.html
contributing/: index.html
docs/: cmip6_aws.md  common.md  contributing.md  index.md  installation.md  usage.md
examples/intro/: index.html
faq/: index.html
installation/: index.html
search/: search_index.json
tests/: __init__.py  test_cmip6_aws.py
usage/: index.html  usage.md
